Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-38427

Mac OS: Native QFileDialog does not update correctly the enabled / disabled files state when changing the current filter

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P3: Somewhat important
    • None
    • 5.2.1, 5.12
    • None
    • Mac OS X Mountain Lion 10.8.5
    • macOS

    Description

      Native QFileDialog does not update correctly the enabled / disabled files state when changing the current filter.
      If we change directory and come back the filtering is correctly applied.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            tpochep Timur Pocheptsov
            pasnox Filipe Azevedo
            Votes:
            5 Vote for this issue
            Watchers:
            9 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes