editdialog: Don't add file filters on OS X

Due to a Qt bug (QTBUG-38427), changing filters in a QFileDialog
does not enable/disable files until the user changes directory.

See issue #230.